--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^8.26.0",
     "@reduxjs/toolkit": "^2.2.6",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
